Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,8 @@
+# Vi mode
+setw -g mode-keys vi
+
 # improve colors
-#set -g default-terminal 'screen-256color'
+set -g default-terminal 'screen-256color'
 
 # act like GNU screen
 unbind C-b
@@ -11,6 +14,12 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+
+# navigate panes with Ctrl + hjkl
+bind C-h select-pane -L
+bind C-j select-pane -D
+bind C-k select-pane -U
+bind C-l select-pane -R
 
 ######################
 ### DESIGN CHANGES ###
