--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim/.vim/pack/python-mode/start/python-mode"]
 	path = vim/.vim/pack/python-mode/start/python-mode
 	url = https://github.com/python-mode/python-mode.git
+[submodule "vim/.vim/pack/nerdtree/start/nerdtree"]
+	path = vim/.vim/pack/nerdtree/start/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
