tmux: Enable 24-bit colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,7 @@
 setw -g mode-keys vi
 
 # improve colors
-set -g default-terminal 'screen-256color'
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # act like GNU screen
 unbind C-b
