Fix tmux option 'terminal-overrides' for Alacritty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,7 @@
 setw -g mode-keys vi
 
 # improve colors
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",*256colo*:Tc,alacritty:RGB"
 
 # act like GNU screen
 unbind C-b
