Set tmux default-terminal to 'tmux-256color'

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,7 @@
 setw -g mode-keys vi
 
 # improve colors
+set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256colo*:Tc,alacritty:RGB"
 
 # act like GNU screen
