vim: Add rust.vim

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vim/.vim/pack/vim-solarized8/opt/vim-solarized8"]
 	path = vim/.vim/pack/vim-solarized8/opt/vim-solarized8
 	url = https://github.com/lifepillar/vim-solarized8.git
+[submodule "vim/.vim/pack/plugins/start/rust.vim"]
+	path = vim/.vim/pack/rust.vim/start/rust.vim
+	url = GitHub:rust-lang/rust.vim
