--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -557,6 +557,12 @@ key_bindings:
   - { key: Down,     mods: Alt,     chars: "\x1b[1;3B"                       }
   - { key: Down,                    chars: "\x1b[B",        mode: ~AppCursor }
   - { key: Down,                    chars: "\x1bOB",        mode: AppCursor  }
+#--- Bug mitigation: https://github.com/alacritty/alacritty/issues/3109
+  - { key: Up,       mods: Control|Alt,                     action: None     }
+  - { key: Down,     mods: Control|Alt,                     action: None     }
+  - { key: Left,     mods: Control|Alt,                     action: None     }
+  - { key: Right,    mods: Control|Alt,                     action: None     }
+#---
   - { key: F1,                      chars: "\x1bOP"                          }
   - { key: F2,                      chars: "\x1bOQ"                          }
   - { key: F3,                      chars: "\x1bOR"                          }
