--- a/misc/tlp/99-radio-devices.conf
+++ b/misc/tlp/99-radio-devices.conf
@@ -9,11 +9,19 @@
 #
 # ------------------------------------------------------------------------------
 
+# Restore radio device state (Bluetooth, WiFi, WWAN) from previous shutdown
+# on system startup: 0=disable, 1=enable.
+# Note: the parameters DEVICES_TO_DISABLE/ENABLE_ON_STARTUP/SHUTDOWN below
+#   are ignored when this is enabled.
+# Default: 0
+
+RESTORE_DEVICE_STATE_ON_STARTUP=1
+
 # Radio devices to enable on startup: bluetooth, wifi, wwan.
 # Separate multiple devices with spaces.
 # Default: <none>
 
-DEVICES_TO_ENABLE_ON_STARTUP="wifi wwan"
+#DEVICES_TO_ENABLE_ON_STARTUP="wifi wwan"
 
 # Radio devices to disable on shutdown: bluetooth, wifi, wwan.
 # Note: use as a workaround for devices that are blocking shutdown.
