--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,6 @@
+# start windows as a non-login shell
+set -g default-command "exec $SHELL"
+
 # Vi mode
 set-window-option -g mode-keys vi
 set-window-option -g status-keys vi
